added social media links to all pages

--- a/week9/W9-Project/index.html
+++ b/week9/W9-Project/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 9 Project</title>
     <link rel="stylesheet" href="/Week9/W9-Project/scss/custom.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>FEUDALE</title>
   </style>
 </head>
 <body>
@@ -69,7 +70,7 @@
             <b><h2>About</h2></b>
             <p><b>FEUDALE</b> has been rocking the Jersey Shore with their edgy mix of rock and blues since forming in 2005. The band of brothers is led by Bryan (Lead Guitar and Vocals), David (Bass and Vocals), and Michael (Drums) Feudale. The band’s eclectic musical influences range from The Beatles and Jimi Hendricks to the likes of Alice in Chains and David Bowie.
               The FEUDALE Brothers
-              Based in Matawan, NJ, FEUDALE (formally known as Feudale Brothers Band) is a hard-rocking, blues inspired band, with a twist of alternative flare. What started as a part-time hobby for the band of brothers, eventually evolved into a full-time passion for writing, recording and playing varied styles of great music.</p>
+              Based in Matawan, NJ, <b>FEUDALE</b> (formally known as <i>Feudale Brothers Band</i>) is a hard-rocking, blues inspired band, with a twist of alternative flare. What started as a part-time hobby for the band of brothers, eventually evolved into a full-time passion for writing, recording and playing varied styles of great music.</p>
             </div>
           </div>
           <div class="row">
@@ -78,7 +79,20 @@
         </div>
       </div>
       
-      <br>
+      <br><br>
+
+      <div class="container">
+        <div class="col">
+          <div class="d-flex justify-content-center">
+            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x"></a>
+            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x"></a>
+            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x"></a>
+            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x"></a>
+          </div>
+        </div>
+      </div>
+  
+      <br><br>
       
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
