--- a/week9/W9-Project/contact.html
+++ b/week9/W9-Project/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
     <link rel="stylesheet" href="/Week9/W9-Project/scss/custom.css"></style>
     <link rel="stylesheet" href="style.css"></style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Contact</title>
 </head>
 <body>
 
@@ -87,7 +88,20 @@
       </div>
     </div>
 
-    <br>
+    <br><br>
+
+    <div class="container">
+      <div class="col">
+        <div class="d-flex justify-content-center">
+          <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x"></a>
+          <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x"></a>
+          <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x"></a>
+          <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x"></a>
+        </div>
+      </div>
+    </div>
+
+    <br><br>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
