--- a/week9/W9-Project/contact.html
+++ b/week9/W9-Project/contact.html
@@ -93,10 +93,10 @@
     <div class="container">
       <div class="col">
         <div class="d-flex justify-content-center">
-          <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x"></a>
-          <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x"></a>
-          <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x"></a>
-          <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x"></a>
+          <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x" alt="Facebook Icon"></a>
+          <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x" alt="Twitter Icon"></a>
+          <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x" alt="Instagram Icon"></a>
+          <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x" alt="YouTube Icon"></a>
         </div>
       </div>
     </div>
