--- a/week9/W9-Project/pictures.html
+++ b/week9/W9-Project/pictures.html
@@ -42,48 +42,53 @@
       <h2>Pictures</h2>
 
       <br>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+      <div class="container">
+        <div class="col">
+          <div class="row">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./Images/Feudale-3.png" class="d-block w-100" alt="FEUDALE LOGO">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/DAVE.jpg" class="rounded d-block w-100" alt="PHOTO OF DAVE">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/BRY.jpg" class="rounded d-block w-100" alt="PHOTO OF BRY">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/MIKE.jpg" class="rounded d-block w-100" alt="PHOTO OF MIKE">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/EPK1.jpg" class="rounded d-block w-100" alt="PHOTO OF BAND">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/EPK2.jpg" class="rounded d-block w-100" alt="PHOTO OF BAND">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/FEUDALE_edit2.png" class="rounded d-block w-100" alt="PHOTO OF BAND">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+          </div>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./Images/Feudale-3.png" class="d-block w-100" alt="FEUDALE LOGO">
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/DAVE.jpg" class="rounded d-block w-100" alt="PHOTO OF DAVE">
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/BRY.jpg" class="rounded d-block w-100" alt="PHOTO OF BRY">
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/MIKE.jpg" class="rounded d-block w-100" alt="PHOTO OF MIKE">
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/EPK1.jpg" class="rounded d-block w-100" alt="PHOTO OF BAND">
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/EPK2.jpg" class="rounded d-block w-100" alt="PHOTO OF BAND">
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/FEUDALE_edit2.png" class="rounded d-block w-100" alt="PHOTO OF BAND">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
 
       <br><br>
@@ -91,10 +96,10 @@
       <div class="container">
         <div class="col">
           <div class="d-flex justify-content-center">
-            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x"></a>
-            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x"></a>
-            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x"></a>
-            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x"></a>
+            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x" alt="Facebook Icon"></a>
+            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x" alt="Twitter Icon"></a>
+            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x" alt="Instagram Icon"></a>
+            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x" alt="YouTube Icon"></a>
           </div>
         </div>
       </div>
