updated social links

--- a/week9/W9-Project/pictures.html
+++ b/week9/W9-Project/pictures.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Week9/W9-Project/scss/custom.css">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Pictures</title>
@@ -96,10 +96,10 @@
       <div class="container">
         <div class="col">
           <div class="d-flex justify-content-center">
-            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x" alt="Facebook Icon"></a>
-            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x" alt="Twitter Icon"></a>
-            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x" alt="Instagram Icon"></a>
-            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x" alt="YouTube Icon"></a>
+            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x" title="Facebook Icon"></a>
+            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x" title="Twitter Icon"></a>
+            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x" title="Instagram Icon"></a>
+            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x" title="YouTube Icon"></a>
           </div>
         </div>
       </div>
