updated Week10 files

--- a/Week10/Videos/dom.html
+++ b/Week10/Videos/dom.html
@@ -13,6 +13,7 @@
     <button class="my-class">Button 3</button>
     <button>Button 4</button>
     <button class="my-class">Button 5</button>
+    <h1 class="my-class">Hello World</h1>
 
     <script src="dom.js"></script>
 
