added notes on class docs

--- a/Week10/Class/index.html
+++ b/Week10/Class/index.html
@@ -7,7 +7,7 @@
     <title>Class</title>
 </head>
 <body>
-    <!-- Div a gives any a tags -->
-    <!-- Div > a only provides a tags under -->
+    <!-- { Div a } will provide any "a" tags -->
+    <!-- { Div > a } only provides sub-class tags -->
 </body>
 </html>
