--- a/Week10/W10-Project/todolist.html
+++ b/Week10/W10-Project/todolist.html
@@ -35,7 +35,7 @@
             </div>
             <div>
             <br>
-                <button id="add" class="btn btn-primary from-control">Create</button>
+                <button id="add" class="btn btn-primary form-control">Create</button>
             </div>
         </div>
     </div>
