updated W10 project files

--- a/Week10/W10-Project/index.html
+++ b/Week10/W10-Project/index.html
@@ -38,20 +38,20 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="form-group">
-                        <label for="new-team-name"><b>Trip Desination</b></label>
-                        <input type="text" class="form-control" id="new-team-name">
+                        <label for="new-trip-name"><b>Trip Desination</b></label>
+                        <input type="text" class="form-control" id="new-trip-name">
                     </div>
                 </div>
             </div>
             <div>
-                <button id="new-team" class="btn btn-primary form-control">Create</button>
+                <button id="new-trip" class="btn btn-primary form-control">Create</button>
             </div>
         </div>
     </div>
     
     <br>
 
-    <div id="teams">
+    <div id="trips">
 
     </div>
 
@@ -90,7 +90,7 @@
     <table id="list" class="table table-light table-striped">
         <tr>
             <th>Schedule</th>
-            <th>Date Created</th>
+            <th>Time</th>
             <th>Start Date</th>
             <th>End Date</th>
             <th>Summary</th>
