updated project files

--- a/Week10/W10-Project/index.html
+++ b/Week10/W10-Project/index.html
@@ -38,8 +38,8 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="form-group">
-                        <label for="new-trip-name"><b>Trip Desination</b></label>
-                        <input type="text" class="form-control" id="new-trip-name">
+                        <label for="new-trip-accomodation"><b>Trip Desination</b></label>
+                        <input type="text" class="form-control" id="new-trip-accomodation">
                     </div>
                 </div>
             </div>
