--- a/Week10/W10-Project/index.html
+++ b/Week10/W10-Project/index.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="form-group">
-                        <label for="new-trip-accomodation"><b>Trip Desination</b></label>
+                        <label for="new-trip-accomodation"><b>Trip Destination</b></label>
                         <input type="text" class="form-control" id="new-trip-accomodation">
                     </div>
                 </div>
