--- a/Week10/W10-Project/index.html
+++ b/Week10/W10-Project/index.html
@@ -75,6 +75,14 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="form-group">
+                        <label for="new-time"><b>Time</b></label>
+                        <input type="time" class="form-control" id="new-time">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
                         <label for="new-task"><b>Itinerary</b></label>
                         <input type="text" class="form-control" id="new-task" placeholder="Task">
                     </div>
