--- a/Week10/W10-Project/index.html
+++ b/Week10/W10-Project/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Vaction Planner</title>
 </head>
 <body class="container">
@@ -97,13 +98,25 @@
 
     <table id="list" class="table table-light table-striped">
         <tr>
-            <th>Schedule</th>
+            <th>Task</th>
             <th>Time</th>
             <th>Start Date</th>
             <th>End Date</th>
-            <th>Summary</th>
         </tr>
     </table>
+
+    <br><br>
+
+    <div class="container">
+        <div class="col">
+          <div class="d-flex justify-content-center">
+            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x" title="Facebook Icon"></a>
+            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x" title="Twitter Icon"></a>
+            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x" title="Instagram Icon"></a>
+            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x" title="YouTube Icon"></a>
+          </div>
+        </div>
+      </div>
 
     <script src="index.js"></script>
     <script src="node_modules/jquery/dist/jquery.js"></script>
