updated quiz files

--- a/Week10/Quiz/quiz.html
+++ b/Week10/Quiz/quiz.html
@@ -10,7 +10,9 @@
 
     <div id="p-div"></div>
     <input id="p-input" type="text" placeholder="New Paragraph">
-    <button id="p-button">Create</button>
+    <button id="p-button" onclick="change()">Create</button>
+
+    <script src="quiz.js"></script>
     
 </body>
 </html>
