updated W10 index.html

--- a/Week10/W10-Project/index.html
+++ b/Week10/W10-Project/index.html
@@ -110,10 +110,10 @@
     <div class="container">
         <div class="col">
           <div class="d-flex justify-content-center">
-            <a href="https://facebook.com/feudalerockband" class="fa fa-facebook fa-stack fa-2x" title="Facebook Icon"></a>
-            <a href="https://twitter.com/feudalerockband" class="fa fa-twitter fa-stack fa-2x" title="Twitter Icon"></a>
-            <a href="https://instagram.com/feudalerockband" class="fa fa-instagram fa-stack fa-2x" title="Instagram Icon"></a>
-            <a href="https://www.youtube.com/channel/UCtEnhVXu10cy81mSURRxJhQ" class="fa fa-youtube fa-stack fa-2x" title="YouTube Icon"></a>
+            <a href="#" class="fa fa-facebook fa-stack fa-2x" title="Facebook Icon"></a>
+            <a href="#" class="fa fa-twitter fa-stack fa-2x" title="Twitter Icon"></a>
+            <a href="#" class="fa fa-instagram fa-stack fa-2x" title="Instagram Icon"></a>
+            <a href="#" class="fa fa-youtube fa-stack fa-2x" title="YouTube Icon"></a>
           </div>
         </div>
       </div>
