updated week11 files

--- a/Week11/index.html
+++ b/Week11/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-
+    <input type="text">
+    <p id="test">Hello World</p>
+    <div class="my-class">Div</div>
+    <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>    
+    </ul>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="app.js"></script>
