updated week11 files

--- a/Week11/index.html
+++ b/Week11/index.html
@@ -8,17 +8,22 @@
 </head>
 <body>
 
-    <input type="text">
+    <!--VIDEO 1-->
+
+    <!-- <input type="text">
     <p id="test">Hello World</p>
     <div class="my-class">Div</div>
     <ul>
         <li>One</li>
         <li>Two</li>
         <li>Three</li>    
-    </ul>
+    </ul> -->
+
+    <!--VIDEO 3-->
+
+    
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="app.js"></script>
-    
 </body>
 </html>
