updated Week11 files

--- a/Week11/Class/guessing-game.html
+++ b/Week11/Class/guessing-game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body type="container">
+<body class="container">
     
     <h1>Guessing Game</h1>
     <h2>Pick a number 1 through 100</h2>
@@ -15,5 +15,6 @@
 
     <input type="text" name="number" id="number">
 
+    <script src="guessing-game.js"></script>
 </body>
 </html>
