updated w11 project files

--- a/Week11/W11-Project/index.html
+++ b/Week11/W11-Project/index.html
@@ -13,10 +13,7 @@
         <h1>TIC TAC TOE</h1>
    
         <!-- Game Instructions -->
-        <p id="ins">Game starts by just Tap on 
-            box<br><br>First Player starts as 
-            <b>Player X</b><br>And<br>Second 
-            Player as <b>Player 0</b>
+        <p id="ins"> To start the <b>game</b>, simply click on a square!
         </p>
    
         <br><br>
