--- a/Week11/W11-Project/index.html
+++ b/Week11/W11-Project/index.html
@@ -47,15 +47,19 @@
         <input type="text" id="b9" onclick=
             "myfunc_11();myfunc();" readonly>
    
-        <!-- Grid end here  -->
+        <!-- The grid ends here  -->
+
         <br><br><br>
-        <!-- Button to reset game -->
+
+        <!-- Button to reset the game -->
         <button id="but" onclick="myfunc_2()">
             RESET
         </button>
    
         <br><br>
-        <!-- Space to show player turn -->
+
+        <!-- Space to show current players turn -->
+
         <p id="print"></p>
    
     </div>
