updated guessing game

--- a/Week11/Class/guessing-game.html
+++ b/Week11/Class/guessing-game.html
@@ -13,8 +13,13 @@
     <h2>Pick a number 1 through 100</h2>
     <h2>Enter your guess:</h2>
 
+    <form id="text">
     <input type="text" name="number" id="number">
+    <br><br>
+    <button type="submit">Enter</button>
+    </form>
 
     <script src="guessing-game.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
 </body>
 </html>
