--- a/Week12/Videos/index.html
+++ b/Week12/Videos/index.html
@@ -11,11 +11,20 @@
 
     <div id="new-house" class="jumbotron">
         <h2>New House</h2>
-        <input type="text" id="new-house-name" class="form-control">
+        <input type="text" id="new-house-name" class="form-control" title="placeholder">
         <br>
         <button id="create-new house" class="btn btn-primary form-control">Create</button>
     </div>
 
+    <br>
+
+    <div id="app">
+
+
+    </div>
+
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="index.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
