updated and added practice files

--- a/Practice/index.html
+++ b/Practice/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <script src="index.js"></script>
+    <!-- <script src="codewars.js"></script> -->
+    <script src="arrays-and-methods.js"></script>
     
 </body>
 </html>
