updated W12 video files

--- a/Week12/Videos/index.html
+++ b/Week12/Videos/index.html
@@ -13,7 +13,7 @@
         <h2>New House</h2>
         <input type="text" id="new-house-name" class="form-control" title="placeholder">
         <br>
-        <button id="create-new house" class="btn btn-primary form-control">Create</button>
+        <button id="create-new-house" class="btn btn-primary form-control">Create</button>
     </div>
 
     <br>
