updated W11 class file

--- a/Week11/Class/index.html
+++ b/Week11/Class/index.html
@@ -16,7 +16,7 @@
         This is another paragraph.
     </p>
 
-    <input type="text" id="form-field">
+    <input type="text" id="form-field" placeholder="input box">
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="index.js"></script>
