updated W12 Project files

--- a/Week12/W12-Project/index.html
+++ b/Week12/W12-Project/index.html
@@ -26,14 +26,14 @@
 
         <br>
 
-        <p>My Checklist:</p>
+        <p>My Checklist</p>
         <p id="counter"></p>
 
         <div class="card">
         
         <table>
             <tr class="to-do">
-                <th><h3>To-do:</h3></th>
+                <th><h3>Left To-do:</h3></th>
             </tr>
             <tbody id="tasks">
             </tbody>
