--- a/Week12/W12-Project/index.html
+++ b/Week12/W12-Project/index.html
@@ -15,19 +15,23 @@
     <div class="title">
         <h2> To-do List</h2>
     </div>
+
+    <br><br>
+
     <div class="form">
+
+        <p id="list">My Checklist</p>
+        <p id="counter"></p>
+
         <form action="javascript:void(0);" method="POST"
         onsubmit="app.Add()">
-            <input type="text" id="add-to-do" placeholder="My To-do List">
+            <input type="text" id="add-to-do" placeholder="Task">
             <input type="submit" value="Add" class="btn btn-primary">
 
     
         </form>
 
         <br>
-
-        <p>My Checklist</p>
-        <p id="counter"></p>
 
         <div class="card">
         
