added script links

--- a/Practice/car-app.html
+++ b/Practice/car-app.html
@@ -9,6 +9,9 @@
     <title>Car App</title>
 </head>
 <body>
-    
+
+
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="car-app.js"></script>
 </body>
 </html>
