--- a/Week12/W12-Project/index.html
+++ b/Week12/W12-Project/index.html
@@ -9,6 +9,12 @@
     <title>Week 12 CRUD Application</title>
 </head>
 <body class="container">
+  
+<nav class="navbar navbar-light bg-light">
+<div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">My Checklist</span>
+</div>
+</nav>
 
     <br>
 
@@ -20,7 +26,6 @@
 
     <div class="form">
 
-        <p id="list">My Checklist</p>
         <p id="counter"></p>
 
         <form action="javascript:void(0);" method="POST"
